--- a/pom.xml
+++ b/pom.xml
@@ -150,19 +150,19 @@
             <groupId>org.bytedeco</groupId>
             <artifactId>javacpp</artifactId>
             <version>1.5.3</version>
-            <classifier>linux-x86_64</classifier>
+            <classifier>windows-x86_64</classifier>
         </dependency>
         <dependency>
             <groupId>org.bytedeco</groupId>
             <artifactId>opencv</artifactId>
             <version>4.3.0-1.5.3</version>
-            <classifier>linux-x86_64</classifier>
+            <classifier>windows-x86_64</classifier>
         </dependency>
         <dependency>
             <groupId>org.bytedeco</groupId>
             <artifactId>openblas</artifactId>
             <version>0.3.9-1.5.3</version>
-            <classifier>linux-x86_64</classifier>
+            <classifier>windows-x86_64</classifier>
         </dependency>
         <!--   dev工具     -->
         <dependency>
