1. 本地配置  2. BUG FIXED

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -98,3 +98,6 @@ logging:
     rollingpolicy:
       clean-history-on-start: true
       max-history: 3
+  level:
+    root: error
+    org.cloud.sonic.simple.mapper: debug
